test/expected/explain_o_less_2rck_b++default.out
struct S; explain bool operator<(S const&, S const&) = default
            ^
13: error: default non-member operator < must also be friend
